force-app/main/default/objects/International_Address__c/International_Address__c.object-meta.xml
<CustomObject>
    <label>International Address</label>
    <nameField>
        <displayFormat>IA-{0000}</displayFormat>
        <label>International Address Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>International Address</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>