force-app/main/default/objects/International_Address__c/fields/Building_Number_Result_Status__c.field-meta.xml
<CustomField>
    <fullName>Building_Number_Result_Status__c</fullName>
    <description>Describes how the building number element has been modified</description>
    <inlineHelpText>Describes how the building number element has been modified</inlineHelpText>
    <label>Building Number Result Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>International_Address_Result_Status</valueSetName>
    </valueSet>
</CustomField>