force-app/main/default/objects/International_Address__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <description>Name or contact information of person.</description>
    <label>Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>