force-app/main/default/objects/International_Address__c/fields/Country_Specific_Locality__c.field-meta.xml
<CustomField>
    <fullName>Country_Specific_Locality__c</fullName>
    <description>Country specific alternative notation for locality</description>
    <inlineHelpText>Country specific alternative notation for locality</inlineHelpText>
    <label>Country Specific Locality</label>
    <length>255</length>
    <type>Text</type>
</CustomField>