force-app/main/default/objects/International_Address__c/fields/Delivery_Address__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Address__c</fullName>
    <description>Local delivery address</description>
    <inlineHelpText>Local delivery address</inlineHelpText>
    <label>Delivery Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>