force-app/main/default/objects/International_Address__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <description>Name or description of the department, if available.</description>
    <inlineHelpText>Name or description of the department, if available.</inlineHelpText>
    <label>Department</label>
    <length>255</length>
    <type>Text</type>
</CustomField>