force-app/main/default/objects/International_Address__c/fields/Formatted_Address__c.field-meta.xml
<CustomField>
    <fullName>Formatted_Address__c</fullName>
    <description>Complete formatted address</description>
    <inlineHelpText>Complete formatted address</inlineHelpText>
    <label>Formatted Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>