force-app/main/default/objects/International_Address__c/fields/House_Number__c.field-meta.xml
<CustomField>
    <fullName>House_Number__c</fullName>
    <description>House number of the address, if available.</description>
    <inlineHelpText>House number of the address, if available.</inlineHelpText>
    <label>House Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>