force-app/main/default/objects/International_Address__c/fields/International_Address_Request__c.field-meta.xml
<CustomField>
    <fullName>International_Address_Request__c</fullName>
    <label>International Address Request</label>
    <referenceTo>International_Address_Request__c</referenceTo>
    <relationshipLabel>International Address</relationshipLabel>
    <relationshipName>International_Address</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>