force-app/main/default/objects/International_Address__c/fields/Language__c.field-meta.xml
<CustomField>
    <fullName>Language__c</fullName>
    <description>This field will hold language</description>
    <label>Language</label>
    <length>255</length>
    <type>Text</type>
</CustomField>