force-app/main/default/objects/International_Address__c/fields/Matchrate__c.field-meta.xml
<CustomField>
    <fullName>Matchrate__c</fullName>
    <description>A matchrate in percentages, denoting how well the result matches the search parameters.</description>
    <inlineHelpText>A matchrate in percentages, denoting how well the result matches the search parameters.</inlineHelpText>
    <label>Matchrate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>