force-app/main/default/objects/International_Address__c/fields/Organization__c.field-meta.xml
<CustomField>
    <fullName>Organization__c</fullName>
    <description>This field will hold organization name of business</description>
    <label>Organization</label>
    <length>100</length>
    <type>Text</type>
</CustomField>