force-app/main/default/objects/International_Address__c/fields/Organization_Match_Status__c.field-meta.xml
<CustomField>
    <fullName>Organization_Match_Status__c</fullName>
    <description>Describes how the organization element matches the available reference data.</description>
    <inlineHelpText>Describes how the organization element matches the available reference data.</inlineHelpText>
    <label>Organization Match Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>International_Address_Match_Status</valueSetName>
    </valueSet>
</CustomField>