force-app/main/default/objects/International_Address__c/fields/POBox__c.field-meta.xml
<CustomField>
    <fullName>POBox__c</fullName>
    <description>This field will hold pobox address of business</description>
    <label>POBox</label>
    <length>50</length>
    <type>Text</type>
</CustomField>