force-app/main/default/objects/International_Address__c/fields/Province_Match_Status__c.field-meta.xml
<CustomField>
    <fullName>Province_Match_Status__c</fullName>
    <inlineHelpText>Describes how the province element matches the available reference data.</inlineHelpText>
    <label>Province Match Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>International_Address_Match_Status</valueSetName>
    </valueSet>
</CustomField>