force-app/main/default/objects/International_Address__c/fields/Province_Result_Status__c.field-meta.xml
<CustomField>
    <fullName>Province_Result_Status__c</fullName>
    <description>Describes how the province element has been modified</description>
    <inlineHelpText>Describes how the province element has been modified</inlineHelpText>
    <label>Province Result Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>International_Address_Result_Status</valueSetName>
    </valueSet>
</CustomField>