force-app/main/default/objects/International_Address__c/fields/RecordRefNo__c.field-meta.xml
<CustomField>
    <fullName>RecordRefNo__c</fullName>
    <description>This field will be used only for unique data reference while displaying the search results on screen.</description>
    <label>RecordRefNumber</label>
    <length>50</length>
    <type>Text</type>
</CustomField>