force-app/main/default/objects/International_Address__c/fields/Street__c.field-meta.xml
<CustomField>
    <fullName>Street__c</fullName>
    <description>This field will hold street name of business</description>
    <label>Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>